# ai-review

./: .coderabbit.yaml  .gitignore  README.md  pyproject.toml  test-commit.txt
.ai-review/: config.yml  context.md
.github/workflows/: ai-code-review.yml
samples/: smelly_orders.py
src/checkout/: __init__.py  pricing.py  shipping.py
src/library_catalog/: __init__.py  __main__.py  cli.py  exceptions.py  models.py  repository.py
src/library_catalog/services/: __init__.py  catalog_service.py  lending_service.py  member_service.py
tests/: conftest.py  test_catalog_service.py  test_lending_service.py
